Add sass-svg lib to inline svg to styles
This should make icons portable and reusable with clean html.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "dependencies": {},
   "devDependencies": {
-    "node-sass": "^3"
+    "node-sass": "^3",
+    "sass-svg": "^1.0.1"
   },
   "scripts": {
     "sass": "node-sass -r -o svg/ svg/",
